--- a/bower.json
+++ b/bower.json
@@ -39,6 +39,9 @@
     "angular-translate-loader-partial": "2.x",
     "angular-translate-loader-static-files": "2.x",
     "angular-mocks": "~1.4.8",
-    "angular-material": "^1.0.7"
+    "angular-material": "^1.1.4"
+  },
+  "resolutions": {
+    "angular": ">=1.3.x"
   }
 }
